Location privacy statement doesn't mention that data is shared with another party
The reason for the privacy statement next to the location services button is to make it clear what the privacy consequences of the feature are, before someone uses them.
In gnome-control-center 45.2, the privacy statement reads:
Location services use GPS, Wi-Fi and cellular connections to determine the approximate location of this device. _Learn about what data is collected, and how it is used._
This text doesn't make it clear that some data is shared with a 3rd party (Mozilla), and this seems like a fairly significant omission. The latest mockups have what I think is a clearer explanation:
Automatic device location uses sources like GPS, Wi-Fi and cellular to determine an approximate location for this device. Location data is sent to Mozilla Location Services as part of this feature.
_Learn about what data is collected and how it is used_