location-page: Implement the new privacy notice

- Move the privacy notice below the master switch
- Use the new text suggested in https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/2817
to mention that data is shared with a another party

Closes https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/2336 and https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/2817